--- a/packages/select-tree/package.json
+++ b/packages/select-tree/package.json
@@ -13,7 +13,8 @@
     "is-promise": "^2.1.0",
     "lodash": "^4.0.0",
     "watch-size": "^2.0.0",
-    "fuzzysearch": "^1.0.3"
+    "fuzzysearch": "^1.0.3",
+    "throttle-debounce": "^1.0.1"
   },
   "peerDependencies": {
     "element-ui": "^2.15.13"
