--- a/packages/virtual-scroller/package.json
+++ b/packages/virtual-scroller/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "et-select-tree",
+  "name": "et-virtual-scroller",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "et-virtual-scroller": "workspace:^",
-    "fuzzysearch": "^1.0.3",
-    "is-promise": "^2.1.0",
-    "lodash": "^4.0.0",
-    "throttle-debounce": "^1.0.1",
-    "watch-size": "^2.0.0"
+    "vue-resize": "^0.4.5",
+    "vue-observe-visibility": "^0.4.4",
+    "scrollparent": "^2.0.1"
   },
   "peerDependencies": {
+    "vue": "^2.6.11",
     "element-ui": "^2.15.13"
   }
 }
