--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -12,7 +12,7 @@
     "element-ui": "^2.15.13",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
-    "select-tree": "workspace:^",
+    "et-select-tree": "workspace:^",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
