--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "lint": "eslint --ext .ts,.tsx,.jsx,.js --fix --quiet ./packages"
+    "lint": "eslint --ext .ts,.tsx,.jsx,.js,.vue --fix --quiet ./packages",
+    "serve": "pnpm run --filter example serve"
   },
   "keywords": [],
   "author": "",
