--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "normalize.css": "^8.0.1",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "vue": "^2.6.14",
