pref：change virtual-tree name

--- a/packages/virtual-tree/package.json
+++ b/packages/virtual-tree/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-virtual-scroll-tree",
+  "name": "vue-2-virtual-scroll-tree",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
