--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -13,7 +13,7 @@
     "sass-loader": "^13.2.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vue-virtual-scroll-tree": "workspace:^",
+    "vue-2-virtual-scroll-tree": "workspace:^",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
