--- a/packages/virtual-tree/package.json
+++ b/packages/virtual-tree/package.json
@@ -1,15 +1,34 @@
 {
   "name": "vue-2-virtual-scroll-tree",
-  "version": "1.0.01",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "module": "dist/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx rollup -c"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "vue-virtual-scroll-list": "^2.3.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/pluginutils": "^5.0.2",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "postcss": "^8.4.27",
+    "rollup": "^3.28.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-vue": "^5.1.9",
+    "vue-template-compiler": "^2.6.14"
   },
   "peerDependencies": {
     "element-ui": "^2.15.13"
